--- a/jQuery/jQuery.HTML
+++ b/jQuery/jQuery.HTML
@@ -247,7 +247,7 @@
   <button id="btn43">post</button>
   <p>上面的按钮都没用，因为跨域问题。</p>
   <p style="color:red;font-size:15px;">2 JSONP</p>
-  <a href="http://www.runoob.com/json/json-jsonp.html">原生js和jQuery如何使用JSONP</a>
+  <a href="http://www.runoob.com/json/json-jsonp.html" target="blank">原生js和jQuery如何使用JSONP</a>
   <p>下面数据是JSONP请求加载的数据：</p>
   <br/>
 
