--- a/Vue.js/vue.html
+++ b/Vue.js/vue.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <title>hz初学Vue.js</title>
   <script src=vue.js></script>
-  <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js">
+  <script src="http://cdn.static.runoob.com/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://unpkg.com/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   </script>
 
   <style type="text/css">
@@ -28,22 +30,58 @@
 
 <body>
   <!--锚-->
-
+  <!--锚
   <div id="mao">
     <a v-for="(item,index) in brlist" v-bind:href="char+index">{{char}}{{index}}:{{item.title}}</a>
     </br>
   </div>
+  -->
+  <div id="mao">
+    <fmao v-for="(n,index) in brlist" v-bind:fuhao=fuhao v-bind:anchor=fuhao+char+index v-bind:title=n v-if="index!=0" key=index></fmao>
+  </div>
+
+  <a style="color:blue;font-size:30px;" name="chapter0">0 引言</a>
+  <p>TODO：锚的#怎么打?</p>
   <!--
   <div id="mao2">
     <maos v-for="item in brlist" v-bind:mao="item" v-bind:char="char"  ></maos>
   </div>
   -->
   <!--锚 end -->
+  <p>例1</p>
+  <p>锚就是vue组件实现的:</p>
 
+  <pre style="border:1px solid #999;">
+ &ltdiv id="mao"&gt
+    &ltfmao v-for="(n,index) in brlist" v-bind:fuhao=fuhao v-bind:anchor=fuhao+char+index v-bind:title=n v-if="index!=0" key=index&gt&lt/fmao&gt
+  &lt/div&gt
 
-  <div id="pre2">
-    <pre2 v-for="item in pre2list" v-bind:mao="item"></pre2>
+Vue.component('fmao', {
+    props: ['anchor', 'title','fuhao'],
+    template: '&ltdiv >\
+    &lta  v-bind:href=anchor>{{anchor}}:{{title}}&lt/a&gt\
+     &lt/br>\
+     &lt/div>'
+})
+
+var br = new Vue({
+    el: "#mao",
+    data: {
+        fuhao:'#',
+        char: 'chapter',
+        brlist: ['学习vue', 'vue基础','vue组件']
+    },
+
+})
+</pre>
+
+  </br>
+
+  <p>例2</p>
+  <div id="pre2" style="border:1px solid #999;">
+    <pre2 v-for="(item,index) in pre2list" v-bind:mao="item" key=index></pre2>
   </div>
+
   <p>v-bind:实现属性和数据的绑定</p>
   <p>v-bind：可以缩写成 ：</p>
   <p>下面的title属性被绑定成数据message=hello vue</p>
@@ -203,9 +241,9 @@
   </div>
 
   <p>如同 v-if 模板，你也可以用带有 v-for 的 &lttemplate&gt 标签来渲染多个元素块。</p>
-  <p>整数迭代：&ltspan&gt v-for="n in 10">{{ n }} &lt/span&gt(失败了。。。)</p>
+  <p>整数迭代：&ltspan&gt v-for="n in 10">{{n}} &lt/span&gt(失败了。。。)</p>
   <div>
-    <p v-for="n in 10">{{ n }} </p>
+    <span v-for="n in 10">{{ n }} </span>
   </div>
 
   <p>你也可以用 v-for 通过一个对象的属性来迭代。</p>
@@ -227,6 +265,40 @@
   <pre>
   你可以用 v-model 指令在表单控件元素上创建双向数据绑定。它会根据控件类型自动选取正确的方法来更新元素。
   尽管有些神奇，但 v-model 本质上不过是语法糖，它负责监听用户的输入事件以更新数据，并特别处理一些极端的例子。
+<div style="background:#D3D3D3;">
+  &ltinput v-model="something"&gt  
+</div>
+  相当于：
+<div style="background:#D3D3D3;">
+  &ltinput
+  v-bind:value="something"
+  v-on:input="something = $event.target.value"&gt
+</div>
+  默认情况下，一个组件的 v-model 会使用 value 属性和 input 事件，但是诸如单选框、复选框之类的输入类型可能把 value 属性用作了别的目的。
+  model 选项可以回避这样的冲突：
+  <div style="background:#D3D3D3;">
+  Vue.component('my-checkbox', {
+  model: {
+    prop: 'checked',
+    event: 'change'
+  },
+  props: {
+    checked: Boolean,
+    // this allows using the `value` prop for a different purpose
+    value: String
+  },
+  // ...
+})
+&ltmy-checkbox v-model="foo" value="some value"&gt&lt/my-checkbox&gt
+</div>
+上述代码等价于：
+<div style="background:#D3D3D3;">
+&ltmy-checkbox
+  :checked="foo"
+  @change="val =&gt { foo = val }"
+  value="some value"&gt
+&lt/my-checkbo&gt
+</div>
     </pre>
   <div style="border:1px solid #999;" id="v1mtext">
     <p>多行文本</p>
@@ -242,7 +314,7 @@
   </br>
 
   <!--第二章 -->
-  <a style="color:blue;font-size:30px;" name="chapter1">2 vue组件（重复的东西就该用组件）</a>
+  <a style="color:blue;font-size:30px;" name="chapter2">2 vue组件（重复的东西就该用组件）</a>
 
   <p style="color:red;font-size:15px;">1 vue 组件基础</p>
   <p>全剧组件的声明：Vue.components('my-comp',{})</p>
@@ -262,7 +334,7 @@
   <p>vue.components的data选项若用在组件当中,则其必须是<strong style="color:coral">函数</strong>！！ </p>
 
 
-  <div id="v2-compdata">
+  <div id="v2-compdata" style="border:1px solid #999;">
     <p>一起变化</p>
     <simple-counter></simple-counter>
     <simple-counter></simple-counter>
@@ -273,6 +345,19 @@
     <simple-counter2></simple-counter2>
     <simple-counter2></simple-counter2>
   </div>
+  </br>
+  </br>
+  </br>
+
+  <p>子父组件 &ltparentc1 v-for="n in 3" key={{n}} &gt&lt/parentc1&gt</p>
+  <p>加上key属性谷歌浏览器不会警告了</p>
+  <div style="border:1px solid #999;" id="parentandchild">
+    <p>汇总机器：总计:{{sum}}</p>
+    <parentc1 v-for="n in 3" v-bind:parentid=n key={{n}} v-on:sumreport="sumtotal"></parentc1>
+
+
+  </div>
+  <img src="http://o9h3qt176.qnssl.com/n5d/cover_74463bd794074edc86fe9fb65fff65f9.png" height="300" width="400"></img>
   </br>
   </br>
   <p style="color:red;font-size:15px;">2 vue prop（子组件接受父组件的值）</p>
@@ -321,7 +406,85 @@
     <!--监听到report时间时，调用父组件的方法-->
     <button-counter v-on:report="incrementTotal"></button-counter>
   </div>
+
+  <p> 有时候两个组件也需要通信 (非父子关系)。在简单的场景下，可以使用一个空的 Vue 实例作为中央事件总线。在复杂的情况下，我们应该考虑使用专门的状态管理模式.（见官文）</p>
+
+  <p style="color:red;font-size:15px;">3 vue 内容分发(transclution)和slot</p>
+  <p>仔细阅读官文。编辑作用域。slot插口 slot 标签是干什么的 具名slot</p>
+
+
+  <div style="border:1px solid #FFA500;">
+    <p>理解slot内容分发的意义</p>
+    <pre>
+    slot有什么用呢？比方下面的，slot中填入的，可能是不同样式的文字，可能是表格、图片，甚至是按钮,
+和 implements一样，子组件只是定义一个interface{},父组件具体的实现它。
+下面是个具名slot.
+  </pre>
+    <div style="border:1px solid #999;" id="stdiv1">
+      <stfather1></stfather1>
+    </div>
+    <div style="border:1px solid #999;" id="stdiv2">
+      <stfather1></stfather1>
+    </div>
+  </div>
+
+  <p>作用域插槽和template的scope属性,作用，比内容分发更牛的是可以将data绑到模板</p>
+  <div style="border:1px solid #999;" id="divsc1">
+    <p>第一种实现</p>
+    <scfather1 :itemsparent=itemsdata></scfather1>
+    <p>第二种实现</p>
+    <scfather2 :itemsparent=itemsdata>
+      </scfather1>
+  </div>
+
   <!--第二章end -->
+
+  <!--第三章 -->
+  <a style="color:blue;font-size:30px;" name="chapter3">3 vue自定义指令</a>
+
+  <p style="color:red;font-size:15px;">1 vue 自定义指令Vue.directive</p>
+
+  <div style="border:1px solid #999;" id="custom-order">
+    <p>页面载入时，input 元素自动填入value：</p>
+    全局<input v-focus> 局部
+    <input v-focus2>
+  </div>
+
+  <p style="color:red;font-size:15px;">2 vue 自定义指令钩子</p>
+
+  <pre>
+    Vue.directive指令定义函数提供了几个钩子函数（可选）：
+    bind: 只调用一次，指令第一次绑定到元素时调用，用这个钩子函数可以定义一个在绑定时执行一次的初始化动作。
+    inserted: 被绑定元素插入父节点时调用（父节点存在即可调用，不必存在于 document 中）。
+    update: 被绑定元素所在的模板更新时调用，而不论绑定值是否变化。通过比较更新前后的绑定值，可以忽略不必要的模板更新（详细的钩子函数参数见下）。
+    componentUpdated: 被绑定元素所在模板完成一次更新周期时调用。
+    unbind: 只调用一次， 指令与元素解绑时调用
+
+    钩子函数的参数有：
+      el: 指令所绑定的元素，可以用来直接操作 DOM 。
+      binding: 一个对象，包含以下属性：
+        name: 指令名，不包括 v- 前缀。
+        value: 指令的绑定值， 例如： v-my-directive="1 + 1", value 的值是 2。
+        ldValue: 指令绑定的前一个值，仅在 update 和 componentUpdated 钩子中可用。无论值是否改变都可用。
+        expression: 绑定值的字符串形式。 例如 v-my-directive="1 + 1" ， expression 的值是 "1 + 1"。
+        arg: 传给指令的参数。例如 v-my-directive:foo， arg 的值是 "foo"。
+        modifiers: 一个包含修饰符的对象。 例如： v-my-directive.foo.bar, 修饰符对象 modifiers 的值是 { foo: true, bar: true }。
+        vnode: Vue 编译生成的虚拟节点，查阅 VNode API 了解更多详情。
+        oldVnode: 上一个虚拟节点，仅在 update 和 componentUpdated 钩子中可用。
+</pre>
+  <div style="border:1px solid #999;" id="gouzi" v-gouzi:hello.a.b="message">
+  </div>
+
+  <!--第三章end -->
+ </br>
+  </br>
+   <!--第四章-->
+  <a style="color:blue;font-size:30px;" name="chapter4">4 vue路由 实现单页多试图</a>
+  </br>
+  <a href="http://www.runoob.com/vue2/vue-routing.html " target="blank">安装</a>
+  <a href="https://router.vuejs.org/zh-cn/" target="blank">文档</a>
+   <!--第四章end -->
+  
   </br>
   </br>
   </br>
@@ -331,6 +494,7 @@
   <script src="v0.js"></script>
   <script src="v1.js"></script>
   <script src="v2.js"></script>
+  <script src="v3.js"></script>
 
   <scripr src="jQueryVue.js">
     </script>
